// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Openapi > Optional 1`] = `
{
  "required": false,
  "schema": {
    "format": "email",
    "type": "string",
  },
}
`;

exports[`Openapi > Required 1`] = `
{
  "required": true,
  "schema": {
    "format": "email",
    "type": "string",
  },
}
`;

exports[`Openapi > With default value 1`] = `
{
  "required": false,
  "schema": {
    "default": "hello@gmail.com",
    "format": "email",
    "type": "string",
  },
}
`;

exports[`Openapi > With extra infos 1`] = `
{
  "required": true,
  "schema": {
    "deprecated": true,
    "description": "Hello Test",
    "format": "email",
    "title": "Title",
    "type": "string",
  },
}
`;
